fixing test cases